# claude-vestige

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  REQUIREMENTS.md  TODO.md  install.sh  pyproject.toml
.claude-plugin/: marketplace.json
claude-vestige-plugin/: .mcp.json  dashboard.html
claude-vestige-plugin/.claude-plugin/: plugin.json
claude-vestige-plugin/hooks/: hooks.json  post_tool_use.py  run.sh  save_observation.py  session_start.py  stop.py  user_prompt.py
claude-vestige-plugin/skills/bootstrap/: SKILL.md
claude-vestige-plugin/skills/search/: SKILL.md
claude_vestige/: __init__.py  api.py  bootstrap.py  cli.py  config.py  embeddings.py  ingester.py  memory.py  server.py  store.py
docs/: WHY.md
tests/: conftest.py  test_core.py  test_observation.py  test_phase3.py  test_session_start.py  test_stop_hook.py
